tdf#153090 writerfilter,sw: DOCX/RTF import/export of TOC \c \t

This is for Table of Figures/Objects/Tables.

The core will happily generate entries from paragraph styles by simply
setting the Template flag and adding the style name.

In Word, this feature differs from ToC in that only a single paragraph
style is allowed, and there is only one level to assign to so that is
omitted and \t is simply the style name (presumably suffering the usual
i18n disaster, see tdf#153083).

So implement it with the same limitations, not reusing the
CreateFromLevelParagraphStyles property on SwXDocumentIndex but instead
add new property CreateFromParagraphStyle.

Change-Id: Ic8ab1fa9e81bdc85cc932f6bba8724d560e0fbc1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145904
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>